--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Welcome to homePlay</h1>
     <video controls width="600">
-        <source src="movie.mp4" type="video/mp4">
+        <source src="movies/Armageddon (1998) [1080p]/Armageddon.1998.1080p.BrRip.x264.YIFY.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     
