--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homePlay</title>
     <link rel="stylesheet" href="styles.css"> 
+    <script src="script.js" defer></script> 
 </head>
 <body>
     <h1>Welcome to homePlay</h1>
-    <video controls width="600">
-        <source src="movies/Armageddon (1998) [1080p]/Armageddon.1998.1080p.BrRip.x264.YIFY.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <h2>Choose from the list below!</h2>
+    <div id="movies" class="moviesWrapper">
+        
+
+    </div>     
     
-    <script src="script.js" defer></script> 
 </body>
 </html>
